--- a/adobephotoshop.html
+++ b/adobephotoshop.html
@@ -34,12 +34,12 @@
         editar fotos existentes ou até mesmo criar suas próprias imagens e gráficos.
         Para acessar o site oficial do Adobe Photoshop, basta clicar na imagem: <a
             href="https://www.adobe.com/br/products/photoshop.html" target="_blank" title="Adobe Photoshop"><img
-                src="img/IconSoftwares/IconPhotoshop.png"></a>
+                src="Img/IconSoftwares/IconPhotoshop.png"></a>
     </p>
 
     <hr>
 
-    <h3>6 grandes artistas que utilizam Adobe Photoshop:</h3>
+    <h3>6 artistas que utilizam o Adobe Photoshop:</h3>
     <ul>
         <li>
             <a href="https://www.instagram.com/floraborsiofficial/" target="_blank" title="Flóra Borsi">Flóra Borsi</a>
