--- a/portfolio.html
+++ b/portfolio.html
@@ -32,10 +32,11 @@
             </legend>
             <ol>
                 <li><a href="#BkmTiposdeTriangulo">Vá para Trabalho Tipos de Triangulo</a></li>
-                <li><a href="#BkmSAnimado">Vá para Trabalho Sistema Animado</a></li>
+                <li><a href="#BkmSistemaAnimado">Vá para Trabalho Sistema Animado</a></li>
                 <li><a href="#BkmFuncoes">Vá para Trabalho Funções</a></li>
                 <li><a href="#BkmOperacoes">Vá para Trabalho Operações</a></li>
                 <li><a href="#BkmBanner">Vá para Trabalho Banner</a></li>
+                <li><a href="#BkmBannerNome">Vá para Trabalho Banner Nome</a></li>
             </ol>
         </fieldset>
     </menu>
@@ -68,12 +69,45 @@
             <b>Para saber mais sobre o repositório <a href="visualstudio.html" target="_blank">Clique aqui</a></b>
             <br>
             <br>
-            <b>Para saber mais sobre C#, basta <a href="csharp.html" target="_blank">clicar aqui</a></b>
+            <b>Para saber mais sobre C# basta <a href="csharp.html" target="_blank">clicar aqui</a></b>
             <br>
             <br>
             <img src="img/Portfolio/TiposTriangulo.jpg" width="416" height="287"
                 title="Projeto Visual Studio Tipos de Triângulo">
         </li>
+    </ul>
+
+    <hr>
+
+    <ul>
+        <li>
+            <h3 id="BkmOKOnly"><b>OkOnly</b></h3>
+            <b>Nome do Projeto:</b>
+            <br>
+            <br>
+            OkOnly
+            <br>
+            <br>
+            <b>Descrição do Projeto:</b>
+            <br>
+            <p>Este projeto foi realizado no IDE (Ambiente de Desenvolvimento Integrado) Microsoft Visual Studio na
+                linguagem C#, onde o mesmo visa demonstrar que ao clicar em um dos botões aparecerá uma mensagem
+                correspondente ao texto onde conterá as opções para apertar.
+                A tecnologia utilizada para a elaboração do projeto foi C# e a IDE Visual Studio.
+            </p>
+            <b>Para acessar o projeto <a href="https://github.com/asergioscosta/ProjetosVisualBasic/tree/main/OKOnly"
+                    target="_blank">Clique aqui</a></b>
+            <br>
+            <br>
+            <b>Para saber mais sobre o repositório <a href="visualstudio.html" target="_blank">Clique aqui</a></b>
+            <br>
+            <br>
+            <b>Para saber mais sobre C# basta <a href="csharp.html" target="_blank">clicar aqui</a></b>
+            <br>
+            <br>
+            <img src="img/Portfolio/OkOnly.png" width="275" height="292" title="Projeto Visual Studio OkOnly">
+        </li>
+        </a>
     </ul>
 
     <hr>
@@ -103,44 +137,11 @@
             <b>Para saber mais sobre o repositório <a href="visualstudio.html" target="_blank">Clique aqui</a></b>
             <br>
             <br>
-            <b>Para saber mais sobre C#, basta <a href="csharp.html" target="_blank">clicar aqui</a></b>
+            <b>Para saber mais sobre C# basta <a href="csharp.html" target="_blank">clicar aqui</a></b>
             <br>
             <br>
             <img src="img/Portfolio/SistemaAnimado.png" width="279" height="290"
                 title="Projeto Visual Studio Sistema Animado">
-        </li>
-        </a>
-    </ul>
-
-    <hr>
-
-    <ul>
-        <li>
-            <h3 id="BkmOKOnly"><b>OkOnly</b></h3>
-            <b>Nome do Projeto:</b>
-            <br>
-            <br>
-            OkOnly
-            <br>
-            <br>
-            <b>Descrição do Projeto:</b>
-            <br>
-            <p>Este projeto foi realizado no IDE (Ambiente de Desenvolvimento Integrado) Microsoft Visual Studio na
-                linguagem C#, onde o mesmo visa demonstrar que ao clicar em um dos botões aparecerá uma mensagem
-                correspondente ao texto onde conterá as opções para apertar.
-                A tecnologia utilizada para a elaboração do projeto foi C# e a IDE Visual Studio.
-            </p>
-            <b>Para acessar o projeto <a href="https://github.com/asergioscosta/ProjetosVisualBasic/tree/main/OKOnly"
-                    target="_blank">Clique aqui</a></b>
-            <br>
-            <br>
-            <b>Para saber mais sobre o repositório <a href="visualstudio.html" target="_blank">Clique aqui</a></b>
-            <br>
-            <br>
-            <b>Para saber mais sobre C#, basta <a href="csharp.html" target="_blank">clicar aqui</a></b>
-            <br>
-            <br>
-            <img src="img/Portfolio/OkOnly.png" width="275" height="292" title="Projeto Visual Studio OkOnly">
         </li>
         </a>
     </ul>
@@ -170,7 +171,7 @@
             <b>Para saber mais sobre o repositório <a href="visualstudio.html" target="_blank">Clique aqui</a></b>
             <br>
             <br>
-            <b>Para saber mais sobre C#, basta <a href="csharp.html" target="_blank">clicar aqui</a></b>
+            <b>Para saber mais sobre C# basta <a href="csharp.html" target="_blank">clicar aqui</a></b>
             <br>
             <br>
             <img src="img/Portfolio/Funcoes.png" width="281" height="290" title="Projeto Visual Studio Funções">
@@ -204,7 +205,7 @@
             <b>Para saber mais sobre o repositório <a href="visualstudio.html" target="_blank">Clique aqui</a></b>
             <br>
             <br>
-            <b>Para saber mais sobre C#, basta <a href="csharp.html" target="_blank">clicar aqui</a></b>
+            <b>Para saber mais sobre C# basta <a href="csharp.html" target="_blank">clicar aqui</a></b>
             <br>
             <br>
             <img src="img/Portfolio/Operacoes.png" width="276" height="286" title="Projeto Visual Studio Operações">
@@ -230,10 +231,7 @@
                 utilizando resources como styles, fontes, pngs e texturas.
                 A tecnologia utilizada para a elaboração do projeto foi o Adobe Photoshop.
             </p>
-            <b>Para acessar o projeto <a
-                    href="https://github.com/asergioscosta/ProjetosVisualBasic/tree/main/TiposdeTriangulo"
-                    target="_blank">Clique aqui</a>
-            </b>
+            <b>Para visualizar os documentos em tamanho original basta clicar sobre a imagem.</b>
             <br>
             <br>
             <b>Para saber mais sobre o Adobe Photoshop, basta <a href="adobephotoshop.html" target="_blank">clicar
@@ -241,23 +239,61 @@
             </b>
             <br>
             <br>
-            <img src="img/DsgPhotoshop/BannerSistemas.png" width="600" height="600"
-                title="Banner Sistemas de Informação">
+            <a href="img/DsgPhotoshop/BannerSistemas.png" target="_blank">
+                <img src="img/DsgPhotoshop/BannerSistemas.png" width="600" height="600"
+                    title="Banner Sistemas de Informação">
+            </a>
+            <br>
         </li>
+    </ul>
 
-        <footer>
-            <div class="container text-center">
-                <small class="copyright">Augusto Sérgio dos Santos Costa
-                    <br>
-                    augusto.costa@a.granbery.metodista.br — asergioscosta@gmail.com — (32) 99837-6945
-                    <br>
-                    <a href="https://www.instagram.com/asergioscosta/" target="_blank" title="instagram">Instagram</a>
-                    <a href="https://api.whatsapp.com/send?phone=5532998376945" target="_blank"
-                        title="Whatsapp">Whatsapp</a>
-                    <a href="https://www.linkedin.com/in/asergioscosta/" target="_blank" title="Linkedin">Linkedin</a>
-                </small>
-            </div>
-        </footer>
+    <hr>
+
+    <ul>
+        <li>
+            <h3 id="BkmBannerNome"><b>Banner Nome</b></h3>
+            <b>Nome do Projeto:</b>
+            <br>
+            <br>
+            Banner Nome
+            <br>
+            <br>
+            <b>Descrição do Projeto:</b>
+            <br>
+            <p>Este projeto foi realizado no editor de imagens Adobe Photoshop, onde foi realizado a mesclagem
+                utilizando resources como styles, fontes, pngs e texturas.
+                A tecnologia utilizada para a elaboração do projeto foi o Adobe Photoshop.
+            </p>
+            <b>Para visualizar os documentos em tamanho original basta clicar sobre a imagem.</b>
+            <br>
+            <br>
+            <b>Para saber mais sobre o Adobe Photoshop, basta <a href="adobephotoshop.html" target="_blank">clicar
+                    aqui</a>
+            </b>
+            <br>
+            <br>
+            <a href="img/DsgPhotoshop/BannerNome.png" target="_blank">
+                <img src="img/DsgPhotoshop/BannerNome.png" width="497" height="375" title="Banner Nome">
+            </a>
+        </li>
+    </ul>
+
+    <br>
+    <br>
+
+    <footer>
+        <div class="container text-center">
+            <small class="copyright">Augusto Sérgio dos Santos Costa
+                <br>
+                augusto.costa@a.granbery.metodista.br — asergioscosta@gmail.com — (32) 99837-6945
+                <br>
+                <a href="https://www.instagram.com/asergioscosta/" target="_blank" title="instagram">Instagram</a>
+                <a href="https://api.whatsapp.com/send?phone=5532998376945" target="_blank"
+                    title="Whatsapp">Whatsapp</a>
+                <a href="https://www.linkedin.com/in/asergioscosta/" target="_blank" title="Linkedin">Linkedin</a>
+            </small>
+        </div>
+    </footer>
 
 </body>
 
